fetch slot btn functionality completed. next is to disable slots based on time and availability

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      </section>
 
      <!-- booking div -->
-      <div class="mainFunctionality col-12 d-flex flex-column flex-md-row container  my-5 p-3  flex-lg-row justify-content-around align-items-center gap-3  "> 
+      <div class="mainFunctionality col-12 d-flex flex-column flex-md-row container  my-5 p-3  flex-lg-row justify-content-around align-items-start gap-3  "> 
 
         <!-- search orch -->
         <div class="col-12 col-lg-5 p-3 shadow-lg rounded-4 " style=" min-height: 400px; background-color: #fdf8e1; position: relative; " >
@@ -92,7 +92,7 @@
             <div class="col-12 p-2 p-3 shadow-lg rounded-4 " style=" background-color: #fdf8e1; min-height: 175px; " >
                 <p>LIVE SLOTS</p>
                 <H5>Select provider + date</H5>
-                <div id="slotsGrid" class=" p-2 mt-3 py-3 rounded-3 text-center " style=" background-color:rgb(250, 231, 155); border: 1px solid rgb(251, 198, 124); color: rgb(83, 82, 82); " >No Data Yet</div>
+                <div id="slotsGrid" class=" p-4 mt-3 rounded-3 text-center d-flex justify-content-around align-items-center flex-wrap gap-2 " style=" background-color:rgb(250, 231, 155); border: 1px solid rgb(251, 198, 124); color: rgb(83, 82, 82); " >No Data Yet</div>
             </div>
             <!-- slots selection grid end -->
 
