functionality to make slots clickable, rendering bookings list added. next is to create functionality to delete individual books

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <!-- slots selection grid -->
             <div class="col-12 p-2 p-3 shadow-lg rounded-4 " style=" background-color: #fdf8e1; min-height: 175px; " >
                 <p>LIVE SLOTS</p>
-                <H5>Select provider + date</H5>
-                <div id="slotsGrid" class=" p-4 mt-3 rounded-3 text-center d-flex justify-content-around align-items-center flex-wrap gap-2 " style=" background-color:rgb(250, 231, 155); border: 1px solid rgb(251, 198, 124); color: rgb(83, 82, 82); " >No Data Yet</div>
+                <H5 id="slotsHeadline" >Select provider + date</H5>
+                <div id="slotsGrid" class=" p-4 mt-3 rounded-3 text-center d-flex justify-content-around align-items-center flex-wrap gap-2 " style=" background-color:rgb(252, 247, 228); border: 1px solid rgb(251, 198, 124); color: rgb(83, 82, 82); " >No Data Yet</div>
             </div>
             <!-- slots selection grid end -->
 
@@ -101,7 +101,7 @@
             <div class="col-12 p-2 p-3 shadow-lg rounded-4 " style=" background-color: #fdf8e1; min-height: 175px; position: relative; " >
                 <p>UPCOMING</p>
                 <H5>My Bookings</H5>
-                <div id="bookingsGrid" class=" p-2 mt-3 py-3 rounded-3 text-center " style=" background-color:rgb(250, 231, 155); border: 1px solid rgb(251, 198, 124); color: rgb(83, 82, 82); " >No Bookings Yet</div>
+                <div id="bookingsGrid" class=" p-2 mt-3 py-3 rounded-3 text-center d-flex flex-column gap-2 " style=" background-color:rgb(252, 247, 228); border: 1px solid rgb(251, 198, 124); color: rgb(83, 82, 82); " >No Bookings Yet</div>
 
                 <!-- clear bookings btn -->
                 <button id="clearAllBookings_Btn">Clear All</button>
