--- a/index.html
+++ b/index.html
@@ -111,8 +111,51 @@
 
       </div>
 
+      <!-- confirmation modal  -->
+       <div class="modal fade" id="confirmBookingModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            
+            <div class="modal-header">
+                <h5 class="modal-title">Confirm Booking</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+                <p id="confirmBookingText"></p>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                Cancel
+                </button>
+                <button type="button" class="btn btn-primary" id="confirmBookingBtn">
+                Confirm
+                </button>
+            </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- toast -->
+     <div class="position-fixed top-0 end-0 p-3" style="z-index: 1100">
+        <div id="appToast" class="toast align-items-center text-bg-primary border-0" role="alert">
+            <div class="d-flex">
+            <div class="toast-body" id="toastMessage">
+                Notification message
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto"
+                    data-bs-dismiss="toast"></button>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- Bootstrap JS script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 
     <!-- link js -->
      <script src="app.js"></script>
