filter  bookings by provider name is implemented

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
             <div class="col-12 p-2 p-3 shadow-lg rounded-4 " style=" background-color: #fdf8e1; min-height: 175px; position: relative; " >
                 <p>UPCOMING</p>
                 <H5>My Bookings</H5>
+
+                <!-- filter by provider -->
+                <select id="bookingFilter" class="form-select mb-3">
+                    <option value="all">All providers</option>
+                </select>
+
                 <div id="bookingsGrid" class=" p-2 mt-3 py-3 rounded-3 text-center d-flex flex-column gap-2 " style=" background-color:rgb(252, 247, 228); border: 1px solid rgb(251, 198, 124); color: rgb(83, 82, 82); " >No Bookings Yet</div>
 
                 <!-- clear bookings btn -->
